# daily-checkin-serverless-app

./: README.md  dailychekin.yaml
.kiro/specs/cdk-infrastructure/: design.md  requirements.md  tasks.md
S3/: index.html
infra/: Makefile  app.py  pyproject.toml
infra/infra/: infra_stack.py
infra/scripts/: localstack-start.sh  localstack-stop.sh
lamda/: submit_daily_checkin.py
